# lab-11-process

./: .astylerc  .travis.yml  CMakeLists.txt  CPackConfig.cmake  ChangeLog.md  README.md
_builds/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Makefile  cmake_install.cmake  install_manifest.txt  process-0.1.0.0-Linux.sh  process-0.1.0.0-Linux.tar.Z
_builds/_3rdParty/Hunter/: install-root-dir
_builds/_3rdParty/Hunter/toolchain/_builds/: CMakeCache.txt  Makefile  cmake_install.cmake
_builds/_CPack_Packages/Linux/STGZ/: process-0.1.0.0-Linux.sh
_builds/_CPack_Packages/Linux/STGZ/process-0.1.0.0-Linux/cmake/: process-config-debug.cmake
_builds/_CPack_Packages/Linux/TZ/: process-0.1.0.0-Linux.tar.Z
_builds/gcc-7-cxx17-pic-Debug/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  tests
_builds/gcc-7-cxx17-pic-Debug/Testing/Temporary/: CTestCostData.txt
_builds/gcc-7-cxx17-pic-Debug/_3rdParty/Hunter/: install-root-dir
_builds/gcc-7-cxx17-pic-Debug/_3rdParty/Hunter/toolchain/_builds/: CMakeCache.txt  Makefile  cmake_install.cmake
_builds/gcc-7-cxx17-pic-Debug/_3rdParty/polly/: saved-arguments
_install/cmake/: process-config.cmake
_logs/polly/gcc-7-cxx17-pic/: log-0.txt  log-1.txt  log-10.txt  log-11.txt  log-12.txt  log-13.txt  log-14.txt  log-15.txt  log-16.txt  log-17.txt  log-18.txt  log-19.txt  log-2.txt  log-20.txt  log-22.txt  log-23.txt  log-25.txt  log-26.txt  log-27.txt  log-28.txt  log-29.txt  log-30.txt  log-31.txt  log-32.txt  log-34.txt  log-4.txt  log-5.txt  log-6.txt  log-7.txt  log-8.txt  log.txt
include/: builder.hpp
sources/: builder.cpp  main.cpp  main.cpp.orig
